# bevy_prototypes

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/bevy_grid/: Cargo.toml
crates/bevy_grid/src/: grid_mesh.rs
games/flappybird/: Cargo.toml
games/flappybird/src/: collision.rs  game_assets.rs  gameover.rs  main.rs  menu.rs  state.rs  world.rs
games/flappybird/src/bird/: animation.rs  component.rs  mod.rs  systems.rs
games/flappybird/src/pipe/: components.rs  mod.rs  systems.rs
games/zombies/: Cargo.toml
games/zombies/src/: main.rs
src/: main.rs
src/grid/: mod.rs
