[package]
name = "bevy_prototypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23.4"
bevy_panorbit_camera = { version = "0.16.1", features = ["bevy_egui"] }
