[package]
name = "bevy_prototypes"
version = "0.1.0"
edition = "2021"


[workspace]
members = ["crates/bevy_grid", "games/flappybird", "games/rts"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23.4"
bevy_panorbit_camera = { version = "0.17.0", features = ["bevy_egui"] }

# Internal crates
bevy_grid = { path = "crates/bevy_grid" }
flappybird = { path = "games/flappybird" }
